# copi

./: LICENSE  README.md  package-lock.json  package.json
.github/workflows/: release.yml
docs/: releases.md
src/: App.tsx  index.css
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: clipboard.rs  db.rs  embed.rs  hotkey.rs  macos.rs  main.rs  ocr.rs  privacy.rs  query_parser.rs  search.rs  settings.rs
src/components/: Picker.tsx
src/contexts/: ThemeContext.tsx
src/hooks/: useKeyboard.ts  useSearch.ts  useTheme.ts
src/overlay/: ActionsSheet.tsx  Overlay.tsx  ResultRow.tsx  ResultsList.tsx  SearchBar.tsx  StatusBar.tsx
src/settings/: Settings.tsx
src/utils/: updater.ts
