[package]
name = "copi"
version = "0.1.2"
edition = "2021"
rust-version = "1.88"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "macos-private-api"] }
tauri-plugin-global-shortcut = "2"

serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

rusqlite = { version = "0.31", features = ["bundled"] }
sqlite-vec = "0.1.7"
zerocopy = "0.8"

arboard = "3.6"
sha2 = "0.10"
hex = "0.4"
regex = "1"
png = "0.17"
chrono = { version = "0.4", features = ["serde"] }
chrono-english = "0.1"

tokio = { version = "1", features = ["full"] }
window-vibrancy = "0.6"

ort = { version = "=2.0.0-rc.12", features = ["download-binaries"] }
tokenizers = { version = "=0.20.4", default-features = false, features = ["onig"] }

syntect = "5"

# Desktop-only plugins
[target."cfg(not(any(target_os = \"android\", target_os = \"ios\")))".dependencies]
tauri-plugin-updater = "2"
tauri-plugin-autostart = "2"
tauri-plugin-dialog = "2"
tauri-plugin-process = "2"

# macOS: NSPanel for fullscreen overlay (EcoPaste pattern — v2.1 branch)
[target."cfg(target_os = \"macos\")".dependencies]
tauri-nspanel = { git = "https://github.com/ahkohd/tauri-nspanel", branch = "v2.1" }
cidre = { version = "0.9.0", default-features = false, features = ["cf", "cg", "cv", "cm", "ns", "objc", "vn", "blocks", "macos_13_0"] }
# Relax-sign-encoding prevents PAC crash on macOS 26 Tahoe
objc2 = { version = "0.6.1", features = ["relax-sign-encoding"] }
objc2-app-kit = { version = "0.3.2", features = ["NSBitmapImageRep", "NSImage", "NSRunningApplication", "NSWorkspace"] }
objc2-foundation = { version = "0.3.2", features = ["NSData", "NSDictionary", "NSGeometry", "NSString", "NSURL", "objc2-core-foundation"] }
core-graphics = "0.25"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]





